[tool.poetry]
name = "cdk-rds-bastion-host"
version = "0.1.0"
description = ""
authors = ["Anthony Lukach <anthonylukach@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
aws-cdk-lib = "^2.38.1"
boto3 = "^1.24.57"

[tool.poetry.dev-dependencies]
black-widow = "^1.9.0"
isort = "^5.10.1"
black = "^22.6.0"
flake9 = "^3.8.3"
boto3-type-annotations = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
